--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "c:\\Users\\User\\Documents\\projects\\qix\\.venv\\Scripts\\python.exe"
+    "python.pythonPath": "c:\\python39\\python.exe"
 }
